--- a/_posts/2012-10-19-hello-world.html
+++ b/_posts/2012-10-19-hello-world.html
@@ -1,10 +1,10 @@
----
+ï»¿---
 layout: default
-title: ÄãºÃ£¬ÀÏ¼Ö
+title: ä½ å¥½ï¼Œè€è´¾
 ---
 
-¡¡¡¡<h2>{{ page.title }}</h2>
+ã€€ã€€<h2>{{ page.title }}</h2>
 
-¡¡¡¡<p>ÎÒµÄµÚÒ»ÆªÎÄÕÂ</p>
+ã€€ã€€<p>æˆ‘çš„ç¬¬ä¸€ç¯‡æ–‡ç« </p>
 
-¡¡¡¡<p>{{ page.date | date_to_string }}</p>
+ã€€ã€€<p>{{ page.date | date_to_string }}</p>
