--- a/_posts/2012-10-19-hello-world.html
+++ b/_posts/2012-10-19-hello-world.html
@@ -1,10 +1,10 @@
-ï»¿---
+---
 layout: default
-title: ä½ å¥½ï¼Œè€è´¾
+title: ÄãºÃ£¬ÊÀ½ç
 ---
 
-ã€€ã€€<h2>{{ page.title }}</h2>
+¡¡¡¡<h2>{{ page.title }}</h2>
 
-ã€€ã€€<p>æˆ‘çš„ç¬¬ä¸€ç¯‡æ–‡ç« </p>
+¡¡¡¡<p>ÎÒµÄµÚÒ»ÆªÎÄÕÂ</p>
 
-ã€€ã€€<p>{{ page.date | date_to_string }}</p>
+¡¡¡¡<p>{{ page.date | date_to_string }}</p>
