--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: 我的Blog
 ---
 
 　　<h2>{{ page.title }}</h2>
-   <img src = "image/head.jpg" title = "帅帅的作者" alt = "作者头像" />
+   <img src = "images/head.jpg" title = "帅帅的作者" alt = "作者头像" />
 　　<p>最新文章</p>
 　　<ul>
 　　　　{% for post in site.posts %}
