--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@ title: 我的Blog
 <div id="pagination">	
   {% if paginator.next_page %}
   <span class="next">
-    <a href="/page{{paginator.next_page}}">→ ??????</a>
+    <a href="/page{{paginator.next_page}}">→后一页</a>
   </span>
   {% endif %}
   {% if paginator.previous_page %}
   <span class="previous">
     {% if paginator.previous_page == 1 %}
-    <a href="/">?????? ←</a>
+    <a href="/">前一页←</a>
     {% else %}
-    <a href="/page{{paginator.previous_page}}">?????? ←</a>
+    <a href="/page{{paginator.previous_page}}">前一页←</a>
     {% endif %}
   </span>
   {% endif %}
