--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: 我的Blog
 <div id="pagination">	
   {% if paginator.next_page %}
   <span class="next">
-    <a href="/page{{paginator.next_page}}">→后一页</a>
+    <a href="/page{{ site.baseurl }}{{paginator.next_page}}">→后一页</a>
   </span>
   {% endif %}
   {% if paginator.previous_page %}
