--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ title: 我的Blog
 
 
 　　{% if paginator.previous_page %}
-    <a href = "page{{ paginator.next_page }}">前一页</a>
+    <a href = "/page{{ paginator.next_page }}">前一页</a>
 {% endif %}
 
 {% if paginator.next_page %}
-<a href = "page{{ paginator.next_page }}">后一页</a>
+<a href = "/page{{ paginator.next_page }}">后一页</a>
 {% endif %}
